--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,7 +2,7 @@
 @import "_global.scss";
 @import "_nav_bar.scss";
 @import "_home.scss";
-@impont "_about.scss";
+@import "_about.scss";
 @import "_class.scss";
 @import "_teachers.scss";
 @import "_summer.scss";
