css changes to contact and login

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,7 @@
 @import "_jrtroupe.scss";
 @import "_schools.scss";
 @import "_footer.scss";
+@import "_login.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_grid.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_accordion.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_panels.scss";
