--- a/resources/assets/sass/_currentshow.scss
+++ b/resources/assets/sass/_currentshow.scss
@@ -4,3 +4,12 @@ div#upcoming {
   height: 300px;
  }
 }
+
+div.panel {
+ .button.red {
+  background-color: $red;
+   a {
+    color: #fff;
+   }
+ }
+}
