added new content updates

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,6 +20,7 @@
 @import "public/bower_components/foundation/scss/foundation/components/_top-bar.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_labels.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_tables.scss";
+@import "public/bower_components/foundation/scss/foundation/components/_tabs.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_reveal.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_tooltips.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_visibility.scss";
