--- a/resources/assets/sass/_summer.scss
+++ b/resources/assets/sass/_summer.scss
@@ -3,12 +3,11 @@ div#overflow {
   overflow: scroll;
 }
 
-dl.sub-nav {
-  border: 1px solid $gray;
-  padding-top: 3%;
-  padding-bottom: 3%;
+dl#summerShow {
+  dd {
+    display: inline;
+  }
 }
-
 div#register {
   button.button.register.expand {
     background-color: $twitter;
