massive save. should commit more

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -149,6 +149,23 @@ footer .fa-wordpress:hover {
   .signup-panel .button {
     margin-left: 35%; }
 
+div.row.register {
+  margin-top: 10%; }
+
+#dashboard {
+  margin-top: 100px; }
+
+div.row.admin {
+  margin-top: 10%; }
+  div.row.admin button.button#cast {
+    margin-left: 7%; }
+
+div#cast a i.fa.fa-pencil-square {
+  color: #00A000; }
+
+div#cast a i.fa.fa-times {
+  color: #880000; }
+
 meta.foundation-version {
   font-family: "/5.5.3/"; }
 
@@ -1792,6 +1809,48 @@ label.error {
     color: #4f4f4f; }
   .alert-box.alert-close {
     opacity: 0; }
+
+.sub-nav {
+  display: block;
+  margin: -0.25rem 0 1.125rem;
+  overflow: hidden;
+  padding-top: 0.25rem;
+  width: auto; }
+  .sub-nav dt {
+    text-transform: uppercase; }
+  .sub-nav dt,
+  .sub-nav dd,
+  .sub-nav li {
+    color: #999999;
+    float: left;
+    font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+    font-size: 0.875rem;
+    font-weight: normal;
+    margin-left: 1rem;
+    margin-bottom: 0; }
+    .sub-nav dt a,
+    .sub-nav dd a,
+    .sub-nav li a {
+      color: #999999;
+      padding: 0.1875rem 1rem;
+      text-decoration: none; }
+      .sub-nav dt a:hover,
+      .sub-nav dd a:hover,
+      .sub-nav li a:hover {
+        color: #737373; }
+    .sub-nav dt.active a,
+    .sub-nav dd.active a,
+    .sub-nav li.active a {
+      border-radius: 3px;
+      background: #008CBA;
+      color: #FFFFFF;
+      cursor: default;
+      font-weight: normal;
+      padding: 0.1875rem 1rem; }
+      .sub-nav dt.active a:hover,
+      .sub-nav dd.active a:hover,
+      .sub-nav li.active a:hover {
+        background: #0078a0; }
 
 meta.foundation-mq-topbar {
   font-family: "/only screen and (min-width:40.0625em)/";
