--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,11 +11,16 @@
 @import "_schools.scss";
 @import "_footer.scss";
 @import "_login.scss";
+@import "_users.scss";
+@import "_dashboard.scss";
+@import "_admin.scss";
+@import "_cast.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_grid.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_accordion.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_panels.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_forms.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_alert-boxes.scss";
+@import "public/bower_components/foundation/scss/foundation/components/_sub-nav.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_buttons.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_top-bar.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_labels.scss";
