--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,6 +15,8 @@
 @import "_dashboard.scss";
 @import "_admin.scss";
 @import "_cast.scss";
+@import "_performance.scss";
+@import "_adminSchools.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_grid.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_accordion.scss";
 @import "public/bower_components/foundation/scss/foundation/components/_panels.scss";
