--- a/public/css/app.css
+++ b/public/css/app.css
@@ -182,6 +182,10 @@ div.small-3.columns#addPerformance button.button.red {
   div.small-3.columns#addPerformance button.button.red a {
     color: #ff6047; }
 
+div#perId img {
+  width: 300px;
+  height: 300px; }
+
 button.button.red {
   background-color: #ff6047; }
   button.button.red a {
