--- a/resources/assets/sass/_performance.scss
+++ b/resources/assets/sass/_performance.scss
@@ -1,4 +1,4 @@
-div.small-3.columns#addPerformance {
+div.small-3.columns.add {
     button.button.red {
       background-color: #fff;
       border: 1px solid $red;
